--- a/opensource.html
+++ b/opensource.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -86,7 +85,7 @@
 
     <!-- Form Button -->
 <div class="container form-button">
-  <a href="https://tatevique.github.io/InfoTechTermProject/infotech/form.html" class="btn btn-info btn-lg">
+  <a href="https://tatevique.github.io/Infotech4/form.html" class="btn btn-info btn-lg">
     Give Feedback on GazeParser
   </a>
 </div>
